[tool.poetry]
name = "code-advent-2024"
version = "0.1.0"
description = ""
authors = ["caner bas <caner.bas@statsperform.com>"]
readme = "README.md"
packages = [{include = "code_advent_2024"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
